chore: run CI test in docker